use of validation functions and viewing messages

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
         </td>
         <td id="button-cell">
         </td>
-        
+      </tr>
+      <tr id="wrong-number-section">
+      </tr>
+      <tr id="anwser-table">
       </tr>
     </table>
     <p id="p"></p>
