added reactive table to program

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <link href="./style/main.css" rel="stylesheet">
+    <link href="./style/tabulator.css" rel="stylesheet">
     <title>Tax-Vat Validator</title>
   </head>
   <body>
@@ -19,10 +20,12 @@
       </tr>
       <tr id="wrong-number-section">
       </tr>
-      <tr id="anwser-table">
+      <tr>
+        
       </tr>
     </table>
     <p id="p"></p>
+    <div id="result-table"></div>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
     <script src="./index.js"></script>
