cleand up, realising

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <h1>Tax-Vat Validator</h1>
     <table>
       <tr>
+        <h4>Dozwolony format liczb</h4>
+        <li>Numery podane po spacji</li>
+        <li>Numery nie zawierają spacji</li>
+        <li>Nip xxxxxxxx lub xxx-xxx-xx-xx</li>
+      </tr>
+      <tr>
         <td id="input-box">
         </td>
         <td id="button-cell">
